# skynetsoap

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  citation.cff  cs_1246.py  cs_1246_p6_30.py  cs_1246_p6_45.py  example.py  pyproject.toml  requirements.txt  test_soap.py
.github/workflows/: publish.yml
skynetsoap/: __init__.py  soap.py
skynetsoap/astrometry/: __init__.py  astrometry_net.py  hybrid_solver.py  local_solver.py  protocols.py  wcs_utils.py
skynetsoap/calibration/: __init__.py  catalog.py  default_calibrator.py  protocols.py  transforms.py  zeropoint.py
skynetsoap/config/: __init__.py  catalogs.toml  defaults.toml  filters.toml  loader.py  photometry.py
skynetsoap/core/: __init__.py  coordinates.py  errors.py  image.py  limiting_mag.py  result.py
skynetsoap/extraction/: __init__.py  aperture.py  background.py  extractor.py
skynetsoap/io/: __init__.py  cache.py  cache_admin.py  plotter.py  skynet_api.py  table.py
skynetsoap/models/: __init__.py  limiting_magnitude.py  observation.py  photometry.py  plotter.py  result.py  table.py
skynetsoap/utils/: __init__.py  logging.py  skynet_api.py  time_utils.py
tests/: __init__.py  api_test.py  conftest.py  fits_test.ipynb  plotter_test.py  table_test.py
tests/integration/: test_pipeline.py
tests/models/: __init__.py  test_observation.py  test_plotter.py  test_table.py
tests/smoke/: test_example_smoke.py
tests/unit/: test_aperture.py  test_background.py  test_config.py  test_errors.py  test_extractor.py  test_hybrid_solver.py  test_image.py  test_limiting_mag.py  (+6 more)
(+2 files in other folders)
